<resources>
    <string name="app_name">Jobify</string>
    <string name="tittle_jobify">Jobify</string>
    <string name="facebook_app_id">685237604982758</string>

    <!-- Content Descriptions-->
    <string name="description_jobify_tittle">Jobify Application Icon</string>

    <!-- Strings related to login and signupMenu Screen-->
    <string name="prompt_content">Content</string>

    <!-- App Actions -->
    <string name="action_view_profile">View Profile</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_search_professional">Search professional</string>

    <!-- Strings related to login and signup -->
    <string name="signup_label">Sign up</string>
    <string name="prompt_registration_complete">Congratulation and thank you for joining us!</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_edit_profile">Edit Profile</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_resume">Resume</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email_username">Username/Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_jobs">Jobs</string>
    <string name="notification_sent">A notification has been sent</string>
    <string name="prompt_skills">Skills</string>
    <string name="prompt_password">Password</string>
    <string name="action_submit">Submit</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_save_changes">Save changes</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_login_info">Invalid password or email</string>
    <string name="error_duplicated_mail">Email is taken</string>
    <string name="error">Error</string>
    <string name="error_add_contact">Invalid username</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="debug_text">Debug</string>

    <!-- Strings related Networking -->
    <string name="http_put">Put</string>
    <string name="http_get">Get</string>
    <string name="http_post">Post</string>
    <string name="http_delete">Delete</string>

    <!-- Responses -->
    <string name="response_sync_success">Successfully sync with server</string>
    <string name="response_sync_failed">Sync with server failed</string>

</resources>
