<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LogInActivity"
              android:focusable="false"
              android:gravity="center"
              android:background="@color/colorPrimary">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/image_jobify_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingTop="12dp"
        android:src="@mipmap/jobify_tittle"
        android:contentDescription="@string/description_jobify_tittle"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#f8fcfc"
                    android:backgroundTint="#e2fdfe"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#f8fcfc"
                    android:backgroundTint="#e2fdfe"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" >

                <Button
                    android:id="@+id/login_sign_up_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_weight=".5"
                    android:elevation="6dp"
                    android:backgroundTint="@color/abc_btn_colored_borderless_text_material"/>

                <Button
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_weight=".5"
                    android:elevation="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="48dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/debug_text"
                    android:id="@+id/debug_section_tittle"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="#ebf9fc"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/debug_ip_edittext"
                    android:hint="IP/PORT 127.0.0.1:8080"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#f8fcfc"
                    android:backgroundTint="#e2fdfe"
                    />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_submit"
                    android:imeActionId="@+id/debug_submit_ip"
                    android:id="@+id/debug_submit_button"
                    android:elevation="6dp"
                    android:layout_gravity="center_horizontal"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable authentication"
                    android:id="@+id/login_checkbox_auth"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
