<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:weightSum="1"
                android:id="@+id/menu_relative_layout">

    <ProgressBar
        android:id="@+id/http_menu_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rest API Test"
        android:id="@+id/tittle_menu_checkpoint"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:paddingBottom="8dp"
        android:textColor="#fffcfc"
        android:layout_below="@+id/http_menu_progress"/>

    <EditText
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_edit_text_url"
        android:background="#ffffff"
        android:layout_below="@+id/tittle_menu_checkpoint"
        android:hint="Relative URL"/>

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_menu"
        android:weightSum="1"
        android:layout_weight=".2"
        android:layout_below="@+id/menu_edit_text_url"
        android:paddingTop="32dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_get"
            android:id="@+id/menu_radio_button_get"
            android:layout_weight="0.25"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_post"
            android:id="@+id/menu_radio_button_post"
            android:layout_weight="0.25"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_put"
            android:id="@+id/menu_radio_button_put"
            android:layout_weight="0.25"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_delete"
            android:id="@+id/menu_radio_button_delete"
            android:layout_weight="0.25"
            />

    </RadioGroup>

    <TextView
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Content"
        android:id="@+id/menu_content_tittle"
        android:layout_below="@+id/radio_group_menu"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_background_cache_hint_selector_material_light"
        android:textSize="24dp"
        android:paddingTop="32dp"/>

    <EditText
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/menu_content_edit_text"
        android:layout_below="@+id/menu_content_tittle"
        android:background="#ffffff"
        android:hint="POST/GET Content"
        android:paddingTop="0dp"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        android:id="@+id/menu_button_submit"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/menu_content_edit_text"
        android:elevation="6dp"/>

</RelativeLayout>