<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                                            android:padding="@dimen/activity_horizontal_margin"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:context=".MainScreenActivity"
                                            tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profile_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_name_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_profile" />

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/change_name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_name_icon"
                android:layout_toRightOf="@id/profile_name_icon"
                android:text="Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/profile_name_icon"
                android:layout_toRightOf="@id/profile_name_icon"
                android:text="@string/prompt_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_resume_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_resumen_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_profile"
                />

            <EditText
                android:id="@+id/profile_resumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_resumen_icon"
                android:layout_toRightOf="@id/profile_resumen_icon"
                android:text="Content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@android:color/transparent"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_resumen"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/profile_resumen_icon"
                android:layout_toRightOf="@id/profile_resumen_icon"
                android:text="@string/prompt_resume"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_amount_friends_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_amount_friends_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_profile"
                />

            <TextView
                android:id="@+id/profile_amount_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_amount_friends_icon"
                android:layout_toRightOf="@id/profile_amount_friends_icon"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:inputType="text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_email_icon"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_email_icon"
                android:layout_toRightOf="@id/profile_email_icon"
                android:text="Email address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_email"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/profile_email_icon"
                android:layout_toRightOf="@id/profile_email_icon"
                android:text="@string/prompt_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />


        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:id="@+id/profile_skills_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_skills_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_skills" />

            <TextView
                android:id="@+id/profile_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_skills_icon"
                android:layout_toRightOf="@id/profile_skills_icon"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Skills"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_skills"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/profile_skills_icon"
                android:layout_toRightOf="@id/profile_skills_icon"
                android:text="Click to expand"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_jobs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/profile_jobs_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_work_black_24dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/profile_jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/profile_jobs_icon"
                android:layout_toRightOf="@id/profile_jobs_icon"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prompt_jobs"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_jobs"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/profile_jobs_icon"
                android:layout_toRightOf="@id/profile_jobs_icon"
                android:text="Click to expand"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />


        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/profile_button_save_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:elevation="6dp"
                android:backgroundTint="@color/abc_btn_colored_borderless_text_material"
                android:text="@string/action_save_changes" />


        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>